优化代码问题警告